--- a/www/templates/4steps.html
+++ b/www/templates/4steps.html
@@ -1,7 +1,13 @@
-<ion-view view-title="4 Steps">
+<ion-view view-title="Cycles">
+<ion-nav-title>
+    <img src="img/logo.png" class="title-image" />
+</ion-nav-title>
 	<ion-content>
-		<div class="padding">
-			4 Steps
+       <h2><img src="img/steps-icon-small.png" class="cycles-icon" />&nbsp;The Four Steps</h2>
+        <img src="img/upload-photo.jpg" alt="Usness" width="100%">
+        <div class="padding">
+            <p>To break out of destructive conflict, you have to connect to your truth and then consciously make a choice to respond with a new action. The best way to do this is to follow a four-step method that helps train the brain for a new response. Current research tells us that we can change unhealthy patterns in our brains!</p>
+            <button href="#" class="button button-block button-calm">Your 4 Steps</button>
 		</div>
 	</ion-content>
 </ion-view>
