--- a/www/templates/cycles.html
+++ b/www/templates/cycles.html
@@ -3,7 +3,7 @@
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
 	<ion-content>
-        <h2>(Cycle Icon)&nbsp;Pain and Peace Cycles</h2>
+       <h2><img src="img/cycle-icon-small.png" class="cycles-icon" />&nbsp;Pain and Peace Cycles</h2>
         <img src="img/upload-photo.jpg" alt="Usness" width="100%">
         <div class="padding">
             <p>While some days in your relationship are filled with peace and joy, there are inevitability days when it’s just the opposite between you two. It’s been proven that how you and your spouse handle conflict together is a key factor in the health and sustainability of your relationship. Discover not only what’s happening when you fight, but also a clear pathway out of conflict. </p>
