--- a/www/templates/cycles_results.html
+++ b/www/templates/cycles_results.html
@@ -4,33 +4,33 @@
 </ion-nav-title>
 	<ion-content>
         <h2><img src="img/cycle-icon-small.png" class="cycles-icon" />&nbsp;Pain and Peace Cycles</h2>
-                <h4>My Pain Cycle</h4>
+                <h4>My Peace Cycle</h4>
         <div class="cycles">
             <div class="cycles-results">
                 <div class="top-left"><img src="img/top-left-arrow.svg" class="top-left-arrow" width="100%" /></div>
                 <div class="top-middle">                
-                    <h5>My Feels</h5>
+                    <h5>My Truths</h5>
                     ###Answer One<br>
                     ###Answer Two<br>
                     ###Answer Three
                 </div>
                 <div class="top-right"><img src="img/top-right-arrow.svg" class="top-right-arrow" width="100%" /></div>
                 <div class="middle-left">
-                    <h5>Spouse's Copes</h5>
+                    <h5>Spouse's Actions</h5>
                     ###Answer One<br>
                     ###Answer Two<br>
                     ###Answer Three
                 </div>
                 <div class="middle-middle"></div>
                 <div class="middle-right">                
-                    <h5>My Copes</h5>
+                    <h5>My Actions</h5>
                     ###Answer One<br>
                     ###Answer Two<br>
                     ###Answer Three
                 </div>
                 <div class="bottom-left"><img src="img/bottom-left-arrow.svg" class="bottom-left-arrow" width="100%" /></div>
                 <div class="bottom-middle">
-                    <br><h5>Spouse's Feels</h5>
+                    <br><h5>Spouse's Truths</h5>
                     ###Answer One<br>
                     ###Answer Two<br>
                     ###Answer Three
@@ -45,6 +45,5 @@
                 <button href="#" class="button button-block button-positive">Discover Your Peace Cycle</button>
             </div>
         </div>
-                
 	</ion-content>
 </ion-view>
