--- a/www/templates/quizzes.html
+++ b/www/templates/quizzes.html
@@ -1,7 +1,14 @@
-<ion-view view-title="Quizzes">
+<ion-view view-title="Cycles">
+<ion-nav-title>
+    <img src="img/logo.png" class="title-image" />
+</ion-nav-title>
 	<ion-content>
-		<div class="padding">
-			Quizzes
+       <h2><img src="img/quiz-icon-small.png" class="cycles-icon" />&nbsp;Usness Quizzes</h2>
+        <img src="img/upload-photo.jpg" alt="Usness" width="100%">
+        <div class="padding">
+            <p>How’s your Us-ness really doing? How well are you managing your boundaries these days? Take these quizzes and find out where you stand.</p>
+            <button href="#" class="button button-block button-calm">US-NESS QUIZ</button>
+            <button href="#" class="button button-block button-calm">BOUNDARIES QUIZ</button>
 		</div>
 	</ion-content>
 </ion-view>
