--- a/www/templates/usness.html
+++ b/www/templates/usness.html
@@ -3,7 +3,7 @@
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
 	<ion-content>
-        <h2>(RING ICON)&nbsp;Your Couple’s Profile</h2>   
+        <h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Your Couple’s Profile</h2>   
         <img src="img/usness.jpg" alt="Usness" width="100%">
 		<div class="padding">
             <p>“Us” is the third identity that lies between a couple. It’s neither completely like the wife or the husband, but a combination of the two. The “Us” cooperates for the good of the couple as a whole and views individual differences as strengths to the relationship. </p>
