--- a/www/templates/usness_activities_further.html
+++ b/www/templates/usness_activities_further.html
@@ -3,7 +3,7 @@
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
 	<ion-content>
-        <h2>(RING ICON)&nbsp;Usness - Take it Further</h2>   
+        <h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Usness - Take it Further</h2>   
 		<div class="padding">
             <p>TAKE IT FURTHER</p>
             <p>
