--- a/www/templates/usness_gifts_results.html
+++ b/www/templates/usness_gifts_results.html
@@ -3,7 +3,7 @@
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
 	<ion-content>
-        <h2>(RING ICON)&nbsp;Spiritual Gifts</h2>   
+        <h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Spiritual Gifts</h2>   
         <h4>Spiritual Gifts Results</h4>
             <ul class="gifts-list list">
                 <li class="item">
