--- a/www/templates/usness_personality_results.html
+++ b/www/templates/usness_personality_results.html
@@ -3,7 +3,7 @@
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
 	<ion-content>
-        <h2>(RING ICON)&nbsp;Personality</h2>   
+        <h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Personality</h2>   
         <h4>Personality Results</h4>
 		<div class="padding">
             <p>Many couples think of the differences between one another as a negative thing. We believe both similarities and differences can be positives for the couple and actually strengthen their Us-ness. 
