--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -20,7 +20,7 @@ $positive: #8f2b21;
 $calm: #808184;
 $lightGrey: #d0d2d3;
 
-$font-bold: "LatoBold";
+$font-default: "LatoBold";
 $font-default: "HelveticaNeue";
 
 
@@ -64,10 +64,10 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 }
 
 .menu-left {
-	font-family: $font-bold;
+	font-family: $font-default;
 	.title {
 		text-align: left;
-		font-family: $font-bold;
+		font-family: $font-default;
 		.threeleaf {
 			@include rotate(180);
 		}
@@ -109,6 +109,11 @@ h2 {
     letter-spacing: 1px;
     text-transform: uppercase;
     margin-bottom: 0px;
+    line-height: 20px;
+    
+    img {
+        vertical-align: sub;
+    }
 }
 
 h3 {
@@ -153,10 +158,10 @@ input[placeholder] {
 	a {
 		color: $positive;
 		text-decoration: none;
-		font-family: "LatoBold";
+		font-family: "HelveticaNeue";
 	}
 	.button {
-		font-family: "LatoLight";
+		font-family: "HelveticaNeue";
 		color: $light;
 	}
 }
@@ -276,6 +281,7 @@ input[placeholder] {
     border-radius: 50px;
     text-transform: uppercase;
     border-width: 0;
+    padding: 5px 10px;
 }
 
 .item-icon-right {
@@ -317,18 +323,24 @@ input[type="radio"] {
 }
 
 .circle-number {
-    font-size: 26px;
+    font-size: 36px;
     width: 60px;
     height: 60px;
     border: 1px $calm solid;
     border-radius: 30px;
     display: inline-block;
     text-align: center;
-    line-height: 55px;
+    line-height: 62px;
+    margin-right: 10px;
 }
 
 .gifts-list li {
     font-size: 24px;
+}
+
+.step-list li {
+    font-size: 28px;
+    text-align: center;
 }
 
 .paragraph-list {
@@ -338,29 +350,57 @@ input[type="radio"] {
     border-bottom: 1px $lightGrey solid;
 }
 
-.cycles {
+.cycles-pain, .cycles-peace {
 
     li {
-    width: 50%;
+    width: 54%;
     float:left;
     display:inline;
     text-transform: uppercase;
-    font-size: 11px;
+    font-size: 12px;
+    letter-spacing: 0px;
+    margin-left: -4%;
+    }
+    
+    .checkbox {
+        padding: 6px 0px;
+    }
+    
+
+    
+    .item-checkbox  {
+        padding-left: 44px;
+    }
+    
+    #measure {
+        width: 100%;
+    }
+    
+   
+}
+
+.cyclesCopes {
+    
+    li {
+    text-transform: uppercase;
+    font-size: 16px;
     letter-spacing: 0px;
     }
     
     .checkbox {
-        padding: 12px 0px;
+        padding: 6px 0px;
     }
     
-    .checkbox input {
-        height: 18px;
-        width: 18px;
-    }
+
     
     .item-checkbox  {
-        padding-left: 34px;
+        padding-left: 44px;
     }
+    
+    #measure {
+        width: 100%;
+    }
+    
 }
 
 .tip-text {
@@ -376,5 +416,247 @@ input[type="radio"] {
     display: block;
     border-radius: 150px;
 }
+
+.small-button-text{
+    font-size: 10px;
+    line-height: 10px;
+}
+
+.two-line-button {
+    line-height: 16px;
+}
+
+li.item  {
+    white-space:normal;
+
+}
+
+.item-stacked-label {
+    font-size: 12px;
+    color: $calm;
+}
+
+.decisions .grey_bg {
+    font-size: 20px;
+    padding-top: 7px;
+    border-top: 1px solid $calm;
+    }
+
+.green-check.checkbox input:before {
+    border-radius: 0px;
+    background-color: #7db584;
+    border-radius: 30px;
+}
+    
+.yellow-check.checkbox input:before {
+    border-radius: 0px;
+    background-color: #f7b568;
+    border-radius: 30px;
+}
+
+.red-check.checkbox input:before {
+    border-radius: 0px;
+    background-color: #ed7479;
+    border-radius: 30px;
+}
+
+.quiz-left-text {
+    text-align: right;
+    font-size: 10px;
+    float: right;
+}
+
+.quizzesUnessForm {
+
+    input[type="radio"] {
+        font-size: 24px;
+    }
+    
+    label {
+        line-height: 30px;
+    }
+    
+    h3 {
+    text-align: center;
+    font-size: 22px;
+    line-height: 20px;
+    }
+}
+
+.red-circle {
+    font-size: 36px;
+    width: 60px;
+    height: 60px;
+    border: 0px $calm solid;
+    border-radius: 30px;
+    display: inline-block;
+    text-align: center;
+    line-height: 62px;
+    margin-right: 10px;
+    text-indent: -3000px;
+    background: #ed7479;
+    vertical-align: middle;
+}
+
+.green-circle {
+    font-size: 36px;
+    width: 60px;
+    height: 60px;
+    border: 0px $calm solid;
+    border-radius: 30px;
+    display: inline-block;
+    text-align: center;
+    line-height: 62px;
+    margin-right: 10px;
+    text-indent: -3000px;
+    background: #7db584;
+}
+
+.orange-circle {
+    font-size: 36px;
+    width: 60px;
+    height: 60px;
+    border: 0px $calm solid;
+    border-radius: 30px;
+    display: inline-block;
+    text-align: center;
+    line-height: 62px;
+    margin-right: 10px;
+    text-indent: -3000px;
+    background: #f7b568;
+}
+
+.yellow-circle {
+    font-size: 36px;
+    width: 60px;
+    height: 60px;
+    border: 0px $calm solid;
+    border-radius: 30px;
+    display: inline-block;
+    text-align: center;
+    line-height: 62px;
+    margin-right: 10px;
+    text-indent: -3000px;
+    background: #fae76b;
+}
+
+.circle-selceted {
+    border: 5px $calm solid;
+}
+
+.quizzes-results-list li {
+    font-size: 12px;
+}
+
+.quizzes-circle-container {
+    float: left;
+    width: 25%;
+}
+
+.quizzes-circle-text {
+    float: left;
+   width: 75%;
+}
+
+
+//Cylces Circles
+
+.cycles {
+    display: block;
+    position: absolute;
+    padding-top: 120;
+    width: 100%;
+    
+    .padding {
+
+    }
+}
+
+.cycles-results {
+    display: block;
+    position: absolute;
+    margin: 24% 10% 5%;
+    
+    h5 {
+        text-transform: uppercase;
+        line-height: 12px;
+        margin-bottom: 0px;
+        color: $positive;
+    }
+    
+    img {
+        padding: 28%;
+    }
+
+}
+
+.circle-cycle {
+    display: block;
+    position: absolute;
+    top: 30px;
+}
+
+
+.top-left {
+    width: 25%;
+    float: left;
+    text-align: center;
+    vertical-align: middle;
+}
+.top-middle {
+    width: 50%;
+    float: left;
+    text-align: center;
+    vertical-align: middle;
+}
+.top-right {
+    width: 25%;
+    float: left;
+    text-align: center;
+    
+    img {
+        text-align: left;
+    }
+}
+
+.middle-left {
+    width: 50%;
+    float: left;
+    text-align: center;
+    vertical-align: middle;
+}
+.middle-middle {
+    width: 0%;
+    float: left;
+    text-align: center;
+    vertical-align: middle;
+}
+.middle-right {
+    width: 50%;
+    float: left;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.bottom-left {
+    width: 25%;
+    float: left;
+    text-align: center;
+    vertical-align: middle;
+}
+.bottom-middle {
+    width: 50%;
+    float: left;
+    text-align: center;
+    vertical-align: middle;
+}
+.bottom-right {
+    width: 25%;
+    float: left;
+    text-align: center;
+    vertical-align: middle;
+}
+    
+    
 
 
