--- a/www/templates/decisions.html
+++ b/www/templates/decisions.html
@@ -1,7 +1,14 @@
-<ion-view view-title="Decisions">
+<ion-view view-title="Cycles">
+<ion-nav-title>
+    <img src="img/logo.png" class="title-image" />
+</ion-nav-title>
 	<ion-content>
-		<div class="padding">
-			Decisions
+       <h2><img src="img/decision-icon-small.png" class="cycles-icon" />&nbsp;OUR DECISIONS</h2>
+        <img src="img/upload-photo.jpg" alt="Usness" width="100%">
+        <div class="padding">
+            <p>Remaining in your peace cycle makes it much easier to land on decisions together as a couple. Use the following decision-making steps to reach your Us solutions. Visit your pain/peace cycles before you begin, if needed.</p>
+            <button href="#" class="button button-block button-calm">NEW DECISION</button>
+            <button href="#" class="button button-block button-calm">REVISIT PAST DECISIONS</button>
 		</div>
 	</ion-content>
 </ion-view>
