--- a/www/templates/usness_personality.html
+++ b/www/templates/usness_personality.html
@@ -3,7 +3,7 @@
     <img src="img/logo.png" class="title-image" />
 </ion-nav-title>
 	<ion-content>
-        <h2>(RING ICON)&nbsp;Personality</h2>   
+        <h2><img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Personality</h2>   
 		<div class="padding">
             <p>Many couples think of the differences between one another as a negative thing. We believe both similarities and differences can be positives for the couple and actually strengthen their Us-ness. 
             </p>
@@ -14,23 +14,23 @@
                 <div class="padding">
                     <hr>
                     <h3>Relating to People</h3>
-                    <label><input type="radio" name="personality.relating" value="extrovert" ng-model="usness.personality.relating">A People-Person, More Extroverted   <br></label>
-                    <label><input type="radio" name="personality.relating" value="introvert" ng-model="usness.personality.relating">Prefers One-on-One Time, More Introverted <br><br></label>
+                    <label><input type="radio" name="personality.relating" value="Prefers To Be Alone" ng-model="usness.personality.relating">A People-Person, More Extroverted   <br></label>
+                    <label><input type="radio" name="personality.relating" value="Prefers To Be With Others" ng-model="usness.personality.relating">Prefers One-on-One Time, More Introverted <br><br></label>
                     <hr>
                     <h3>ACCOMPLISHING TASKS</h3>
-                    <label><input type="radio" name="personality.tasks" value="extrovert" ng-model="usness.personality.tasks">More Orderly, Intentional, Prepared, Controlled  <br></label>
-                    <label><input type="radio" name="personality.tasks" value="introvert" ng-model="usness.personality.tasks">More Flexible, Spontaneous, Easygoing, Adaptable <br><br></label>
+                    <label><input type="radio" name="personality.tasks" value="Thinks In Specifics" ng-model="usness.personality.tasks">More Orderly, Intentional, Prepared, Controlled  <br></label>
+                    <label><input type="radio" name="personality.tasks" value="Thinks in Openly " ng-model="usness.personality.tasks">More Flexible, Spontaneous, Easygoing, Adaptable <br><br></label>
                     <hr>
                     <h3>MAKING DECISIONS</h3>
-                    <label><input type="radio" name="personality.decisions" value="extrovert" ng-model="usness.personality.relating">Rational, Straightforward, Seek Justice, Certain  <br></label>
-                    <label><input type="radio" name="personality.decisions" value="introvert" ng-model="usness.personality.relating">Compassionate, Gentle, Cooperative, Lenient <br><br></label>
+                    <label><input type="radio" name="personality.decisions" value="By Analyzing Information" ng-model="usness.personality.relating">Rational, Straightforward, Seek Justice, Certain  <br></label>
+                    <label><input type="radio" name="personality.decisions" value="By listening to their gut feelings" ng-model="usness.personality.relating">Compassionate, Gentle, Cooperative, Lenient <br><br></label>
                     <hr>
                     <h3>LEARNING INFORMATION</h3>
-                    <label><input type="radio" name="personality.learning" value="extrovert" ng-model="usness.personality.relating">Relying on Common Sense, Facts, History   <br></label>
-                    <label><input type="radio" name="personality.learning" value="introvert" ng-model="usness.personality.relating">Relying on Ideas, Theory, Possibilities <br><br></label>
-                    <label><input type="submit" value="Save and Continue" class="button button-block button-positive" />
+                    <label><input type="radio" name="personality.learning" value="By Planning Ahead" ng-model="usness.personality.relating">Relying on Common Sense, Facts, History   <br></label>
+                    <label><input type="radio" name="personality.learning" value="By Ideas and Personalities" ng-model="usness.personality.relating">Relying on Ideas, Theory, Possibilities <br><br></label>
+                    
+                    <label><input type="submit" value="Save and Continue" class="button button-block button-positive" /></label>
                     <button href="#" class="button button-block button-calm">Compare with Spouse</button>
-
                 </div>
             </form>
 	</ion-content>
