--- a/www/templates/usness.html
+++ b/www/templates/usness.html
@@ -8,9 +8,9 @@
 		<div class="padding">
             <p>“Us” is the third identity that lies between a couple. It’s neither completely like the wife or the husband, but a combination of the two. The “Us” cooperates for the good of the couple as a whole and views individual differences as strengths to the relationship. </p>
             <br>
-            <button ui-sref="menu.tabs.cycles" class="button button-block button-calm">US-NESS ACTIVITIES</button>
-            <button href="#" class="button button-block button-calm">PERSONALITY</button>
-            <button href="#" class="button button-block button-calm">SPIRITUAL GIFTS</button>
+            <button ui-sref="menu.tabs.usness_activities" class="button button-block button-calm">US-NESS ACTIVITIES</button>
+            <button ui-sref="menu.tabs.usness_personality" class="button button-block button-calm">PERSONALITY</button>
+            <button ui-sref="menu.tabs.usness_gifts" class="button button-block button-calm">SPIRITUAL GIFTS</button>
 		</div>
 	</ion-content>
 </ion-view>
