--- a/www/templates/photo.html
+++ b/www/templates/photo.html
@@ -8,6 +8,7 @@
             <img src="img/upload-photo.jpg" alt="Usness" width="100%">
 			<button ng-click="getPic(1)" class="button button-block button-calm">Take New Photo</button>
 			<button ng-click="getPic(0)" class="button button-block button-calm">Choose Photo from Library</button>
+			<img ng-src="picData">
 		</div>
 	</ion-content>
 </ion-view>
