--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,56 +1,45 @@
 <ion-view view-title="Profile">
-<ion-nav-title>
-    <img src="img/logo.png" class="title-image" />
-</ion-nav-title>
+	<ion-nav-title>
+		<img src="img/logo.png" class="title-image" />
+	</ion-nav-title>
 	<ion-content>
-        <h2><i class="ion-gear-b" data-pack="default" data-tags="settings, options, cog"></i>&nbsp;Your Couple’s Profile</h2>
-		<a ui-sref="menu.tabs.photo"><img src="img/upload-photo.jpg" alt="Usness" width="100%"></a>
-        <div class="padding">
-            <form name="profileForm" novalidate="" ng-submit="profile(profileForm)">
-            	<a ui-sref="menu.tabs.photo">TEST</a>
+		<h2><i class="ion-gear-b" data-pack="default" data-tags="settings, options, cog"></i>&nbsp;Your Couple’s Profile</h2>
+		<a ng-if="!user.picData" ui-sref="menu.tabs.photo">
+			<img src="img/upload-photo.jpg" alt="Usness" width="100%">
+		</a>
+		<img ng-src="{{user.picData}}" width="100%">
+		<div class="padding">
+			<form name="profileForm" novalidate="" ng-submit="profile(profileForm)">
+				<a ui-sref="menu.tabs.photo">TEST</a>
 				<div class="list list-inset">
-					<h5>Name</h5>
-					{{user.first_name}} {{user.last_name}}
-				</div>
+					<h5>Name</h5>{{user.first_name}} {{user.last_name}}</div>
 				<div class="list list-inset">
 					<h5>Spouse's Name</h5>
-					<button ng-if="!user.spouse.id" ui-sref="menu.tabs.link" class="button button-block button-calm">Link to Spouse’s Account</button>
-					{{user.spouse.first_name}} {{user.spouse.last_name}}
-				</div>
-                <div class="list list-inset">
+					<button ng-if="!user.spouse.id" ui-sref="menu.tabs.link" class="button button-block button-calm">Link to Spouse’s Account</button>{{user.spouse.first_name}} {{user.spouse.last_name}}</div>
+				<div class="list list-inset">
 					<div class="item item-input">
 						<input name="husbands_first_name" ng-model="User.husbands_first_name" type="text" placeholder="HUSBAND'S FIRST NAME" required />
 					</div>
 					<div class="form-errors" ng-show="profileForm.husbands_first_name.$error && profileForm.$submitted" ng-messages="profileForm.husbands_first_name.$error" ng-messages-include="templates/errors.html"></div>
 				</div>
-                
-                
-<!--Needs Validation-->
-                
-                
+				<!--Needs Validation-->
 				<div class="list list-inset">
 					<div class="item item-input">
-                        <div class="item-icon-right">
-                            <i class="icon ion-calendar"></i>
-                            <input name="wedding_anniversary" ng-model="User.wedding_anniversary" type="text" placeholder="WEDDING ANNIVERSARY" required />
-                        </div>
+						<div class="item-icon-right">
+							<i class="icon ion-calendar"></i>
+							<input name="wedding_anniversary" ng-model="User.wedding_anniversary" type="text" placeholder="WEDDING ANNIVERSARY" required />
+						</div>
 					</div>
 				</div>
-              
-				
-                <div class="list list-inset">
+				<div class="list list-inset">
 					<div class="item item-input">
-                        <div class="item-icon-right">
-                            <i class="icon ion-calendar"></i>
-                            <input name="first_date_anniversary" ng-model="User.first_date_anniversary" type="text" placeholder="FIRST DATE ANNIVERSARY" required />
-                        </div>
+						<div class="item-icon-right">
+							<i class="icon ion-calendar"></i>
+							<input name="first_date_anniversary" ng-model="User.first_date_anniversary" type="text" placeholder="FIRST DATE ANNIVERSARY" required />
+						</div>
 					</div>
 				</div>
-                
-<!--End Needs Validation-->
-                
-  
-                
+				<!--End Needs Validation-->
 				<input type="submit" value="NEXT STEP" class="button button-block button-positive" />
 			</form>
 		</div>
