--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -23,6 +23,7 @@
 				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.profile"><span class="threeleaf">g</span> Profile</ion-item>
 				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.notifications"><span class="threeleaf">y</span> Notifications</ion-item>
 				<ion-item nav-clear="" menu-close="" ><a ng-click="logout()"><span class="threeleaf">u</span> Log Out</a></ion-item>
+				<ion-item nav-clear="" menu-close="" ui-sref="menu.tabs.home"><span class="threeleaf">n</span> PAGE INDEX</ion-item>
 			</ion-list>
 		</ion-content>
 	</ion-side-menu>
