--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -3,7 +3,7 @@
 -->
 <ion-tabs class="tabs-icon-top tabs-positive">
 
-	<ion-tab title="US-NESS" icon="icon threeleaf threeleaf-usness" ui-sref="menu.tabs.home">
+	<ion-tab title="US-NESS" icon="icon threeleaf threeleaf-usness" ui-sref="menu.tabs.usness">
 		<ion-nav-view name="tab-home"></ion-nav-view>
 	</ion-tab>
 
