--- a/www/templates/link.html
+++ b/www/templates/link.html
@@ -4,10 +4,10 @@
 </ion-nav-title>
 	<ion-content>
         <h2><i class="ion-gear-b" data-pack="default" data-tags="settings, options, cog"></i>&nbsp;Link To Your Spouse's Account</h2>
-        <a ng-if="!user.picData" ui-sref="menu.tabs.photo">
+        <a ng-if="!user.picture" ui-sref="menu.tabs.photo">
 			<img src="img/upload-photo.jpg" alt="Usness" width="100%">
 		</a>
-		<img ng-if="user.picData" ng-src="{{user.picData}}" width="100%">
+		<img ng-if="user.picture" ng-src="{{DOMAIN + '/uploads/image_'+user.id+'.jpg'}}" width="100%">
         <div class="padding">
             <form name="linkForm" novalidate="" ng-submit="link(profileForm)">
 				<div class="list list-inset">
