--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -3,12 +3,11 @@
 		<img src="img/logo.png" class="title-image" />
 	</ion-nav-title>
 	<ion-content>
-		<h2>
-			<i class="ion-gear-b" data-pack="default" data-tags="settings, options, cog"></i>&nbsp;Your Couple’s Profile</h2>
-		<a ng-if="!user.picData" ui-sref="menu.tabs.photo">
+		<h2><i class="ion-gear-b" data-pack="default" data-tags="settings, options, cog"></i>&nbsp;Your Couple’s Profile</h2>
+		<a ng-if="!user.picture" ui-sref="menu.tabs.photo">
 			<img src="img/upload-photo.jpg" alt="Usness" width="100%">
 		</a>
-		<img ng-if="user.picData" ng-src="{{user.picData}}" width="100%">
+		<img ng-if="user.picture" ng-src="{{DOMAIN + '/uploads/image_'+user.id+'.jpg'}}" width="100%">
 		<div class="padding">
 			<a ui-sref="menu.tabs.photo" class="button button-block button-calm">Change Photo</a>
 			<form name="profileForm" novalidate="" ng-submit="profile(profileForm)">
